figue/tests/integration/snapshots/main__integration__err__error_negative_value_for_unsigned.snap
---
source: tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: failed to parse "-10" as usize
   ╭─[ <cli>:1:9 ]
   │
 1 │ --count -10
   │         ─┬─  
   │          ╰─── failed to parse "-10" as usize
───╯
